whoami/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami
        resources:
          limits:
            cpu: "50m"
            memory: "64Mi"
